# CSE-230-SpaceInvaders

./: README.md  spaceinvaders.cabal
app/: Data.hs  GameHandler.hs  Leaderboard.hs  Main.hs  UI.hs
test/: SpaceinvaderTest.hs
