cabal-version:      3.6
name:               spaceinvaders
version:            0.1.0.0

executable spaceinvaders
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    main-is:          Main.hs
    other-modules:    UI, Data, GameHandler, Leaderboard
    hs-source-dirs:   app
    build-depends:    base
                    , brick == 2.1.1
                    , extra
                    , linear
                    , vty == 6.1
                    , vty-unix
                    , containers
                    , lens
                    , sqlite-simple
                    , time

Test-Suite spaceinvaders-test
    default-language: Haskell2010
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          SpaceinvaderTest.hs
    other-modules:    GameHandler, Data, Leaderboard
    build-depends:    base
                    , brick == 2.1.1
                    , linear
                    , vty
                    , lens
                    , tasty >= 1.3
                    , tasty-hunit 
                    , sqlite-simple
                    , time
